<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fence Indoor</string>
    <string name="app_name_title">FenceIndoor</string>
    <string name="hello_world">FenceIndoor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scelta_area">Area handle</string>
    <string name="label_scanning">Scanning</string>
    <string name="label_training">Training</string>
    <string name="label_predict">Predict</string>
    <string name="label_settings">Settings</string>
    <string name="title_activity_scan">Scanning wifi</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_debug">Debug</string>

    <!-- settings for Wifi Scan -->
    <string name="pref_header_wifi_scan">Wifi scan</string>

    <string name="pref_title_server_path">Server path</string>
    <string name="pref_default_server_path">http://localhost:8080</string>

    <string name="pref_title_wifi_level_scale">Wifi leven scale</string>
    <string-array name="pref_wifi_level_scale_titles">
        <item>False-True scale</item>
        <item>Low-Mid-High scale</item>
        <item>L-LM-M-MH-H scale</item>
        <item>Ten scale</item>
        <item>One-Hundred scale</item>
        <item>One-Thousand scale</item>
    </string-array>
    <string-array name="pref_wifi_level_scale_values">
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>100</item>
        <item>1000</item>
    </string-array>

    <string name="pref_title_wifi_min_level">Wifi minimum level</string>

    <string name="pref_title_train_scan_count">Train scan count</string>
    <string-array name="pref_train_scan_count_titles">
        <item>1 scan</item>
        <item>10 scans</item>
        <item>25 scans</item>
        <item>50 scans</item>
        <item>100 scans</item>
        <item>250 scans</item>
        <item>500 scans</item>
    </string-array>
    <string-array name="pref_train_scan_count_values">
        <item>1</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
    </string-array>

    <string name="pref_title_predict_scan_count">Predict scan count</string>
    <string-array name="pref_predict_scan_count_titles">
        <item>predict with 1 scan</item>
        <item>predict with 3 scans</item>
        <item>predict with 5 scans</item>
    </string-array>
    <string-array name="pref_predict_scan_count_values">
        <item>1</item>
        <item>3</item>
        <item>5</item>
    </string-array>

    <string name="pref_title_skip_scan_count">Exclude initial scan count</string>
    <string-array name="pref_skip_scan_count_titles">
        <item>no scan excluded</item>
        <item>1 scan excluded</item>
        <item>2 scans excluded</item>
        <item>3 scans excluded</item>
        <item>5 scans excluded</item>
    </string-array>
    <string-array name="pref_skip_scan_count_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
    </string-array>

    <string name="pref_title_beacon_measure_type">Beacon measure type</string>
    <string-array name="pref_beacon_measure_type_titles">
        <item>Rssi</item>
        <item>Dinstance</item>
    </string-array>
    <string-array name="pref_beacon_measure_type_values">
        <item>rssi</item>
        <item>dinstance</item>
    </string-array>
</resources>
