<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	   <LinearLayout
	        android:id="@+id/header"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:orientation="vertical"
		    android:padding="5dp" 
		    android:layout_centerHorizontal="true">
			    
	        <ImageView 
	           android:layout_width="300dip"  
               android:layout_height="150dip"
               android:layout_marginTop="50dp"
               android:src="@drawable/logo"
               android:scaleType="fitXY"/>

		</LinearLayout>

		<TextView
			android:id="@+id/area"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dp"
			android:layout_marginLeft="15dp"
			android:textSize="18sp"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>


        <LinearLayout
            android:id="@+id/buttonList3"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_alignParentBottom="true">

			<Button
				android:id="@+id/scanning"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/label_scanning"
				android:paddingTop="5dip"
				android:paddingBottom="5dip"
				android:drawableTop="@drawable/scanning"
				android:textSize="13sp"
				android:textColor="#fff"
				android:layout_margin="5dip"
				android:background="#F3B200"/>

			<Button
				android:id="@+id/settings"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/label_settings"
				android:paddingTop="5dip"
				android:paddingBottom="5dip"
				android:drawableTop="@drawable/settings"
				android:textSize="13sp"
				android:textColor="#fff"
				android:layout_margin="5dip"
				android:background="#00C13F"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonList1"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_above="@id/buttonList3">

            <Button
                android:id="@+id/training"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/label_training"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:drawableTop="@drawable/training"
                android:textSize="13sp"
                android:textColor="#fff"
                android:layout_margin="5dip"
                android:background="#2572EB"/>

            <Button
                android:id="@+id/predict"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/label_predict"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:drawableTop="@drawable/predict"
                android:textSize="13sp"
                android:textColor="#fff"
                android:layout_margin="5dip"
                android:background="#DA542C"/>
        </LinearLayout>

</RelativeLayout>

